# what-time-is-it-now-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
src/: __init__.py  server.py
