[project]
name = "what-time-is-it-mcp"
version = "0.1.0"
description = "A simple MCP server that provides current time information"
authors = [{ name = "ultrathink" }]
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.9.2,<2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

keywords = [
    "mcp",
    "mcp server",
    "model context protocol",
    "time",
    "what-time-is-it",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
what-time-is-it-mcp = "src.server:main"